--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
         "forceConsistentCasingInFileNames": true,
         "declaration": true,
         "declarationMap": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "moduleResolution": "node"
     },
     "include": [
         "src/**/*.ts"
@@ -23,5 +24,13 @@
     "exclude": [
         "node_modules",
         "dist"
-    ]
+    ],
+    "tsup": {
+        "clean": true,
+        "minify": false,
+        "sourcemap": true,
+        "format": [
+            "esm"
+        ]
+    }
 }
