--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/crypto-js": "^4.2.2",
-    "@types/node": "^24.0.0",
-    "@types/w3c-web-serial": "^1.0.8",
+    "@noble/ciphers": "^1.3.0",
+    "@noble/curves": "^1.9.2",
+    "@noble/hashes": "^1.8.0",
+    "@scure/base": "^1.2.6",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   },
@@ -31,6 +32,7 @@
     "sourcemap": true
   },
   "dependencies": {
-    "crypto-js": "^4.2.0"
+    "@types/w3c-web-serial": "^1.0.8",
+    "ts-md5": "^1.3.1"
   }
 }
