--- a/package.json
+++ b/package.json
@@ -12,19 +12,16 @@
     }
   },
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts",
-    "dev": "tsup src/index.ts --format esm --dts --watch"
+    "build": "vite build",
+    "dev": "vite"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@noble/ciphers": "^1.3.0",
-    "@noble/curves": "^1.9.2",
-    "@noble/hashes": "^1.8.0",
-    "@scure/base": "^1.2.6",
     "tsup": "^8.5.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite": "^7.0.0"
   },
   "tsup": {
     "clean": true,
@@ -32,6 +29,10 @@
     "sourcemap": true
   },
   "dependencies": {
+    "@noble/ciphers": "^1.3.0",
+    "@noble/curves": "^1.9.2",
+    "@noble/hashes": "^1.8.0",
+    "@scure/base": "^1.2.6",
     "@types/w3c-web-serial": "^1.0.8",
     "ts-md5": "^1.3.1"
   }
