--- a/package.json
+++ b/package.json
@@ -1,32 +1,43 @@
 {
   "name": "js_nesigner_sdk",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "A JavaScript SDK for the nesigner.",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.es.js",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.es.js"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.cjs.js"
+      }
     }
   },
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "vite build",
+    "build": "vite build && tsc --emitDeclarationOnly --outDir dist",
     "dev": "vite"
   },
-  "keywords": [],
+  "keywords": [
+    "nesigner",
+    "sdk",
+    "nostr",
+    "hardware",
+    "wallet"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
     "vite": "^7.0.0"
-  },
-  "tsup": {
-    "clean": true,
-    "minify": false,
-    "sourcemap": true
   },
   "dependencies": {
     "@noble/ciphers": "^1.3.0",
