--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,17 @@
 {
     "compilerOptions": {
-        "target": "ES2020", // 调整为更兼容的版本
+        "target": "ES2020",
         "module": "ESNext",
-        "lib": [
-            "ES2020",
-            "DOM"
-        ],
+        "moduleResolution": "node",
+        "declaration": true,
         "outDir": "./dist",
-        "rootDir": "./src",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "declaration": true,
-        "declarationMap": true,
-        "sourceMap": true,
-        "moduleResolution": "bundler", // 浏览器友好的模块解析方式
-        "types": [
-            "w3c-web-serial"
-        ],
-        "downlevelIteration": true, // 确保迭代器兼容旧浏览器
-        "useDefineForClassFields": false // 避免类字段的兼容性问题
+        "forceConsistentCasingInFileNames": true
     },
     "include": [
-        "src/**/*.ts",
-        "types/**/*.d.ts" // 添加自定义类型目录
+        "src/**/*"
     ],
     "exclude": [
         "node_modules",
